# recommender-system

./: .dockerignore  .dockerignore.orig  .env.example  .gitignore  Dockerfile  README.md  README.md.orig  alembic.ini  docker-compose.yaml  docker-compose.yaml.orig  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/: env.py
migrations/versions/: 06b9cf052826_init_db.py  2013c7551459_initial_migration.py  30b5348ad57b_alterando_tabela_user.py  6a3f4553ce1f_favorites_names_to_str.py
recsys/: main.py
recsys/common/: database.py  security.py
recsys/features/auth/: application.py  model.py  routes.py
recsys/features/movies/: application.py  application.py.orig  model.py  repository.py  repository.py.orig  routes.py
recsys/features/ratings/: application.py  model.py  repository.py  routes.py
recsys/features/users/: application.py  application.py.orig  model.py  repository.py  routes.py
scripts/: movies_dataset.csv  populate_db.py
tests/: conftest.py  test_auth.py  test_movie.py  test_rating.py  test_security.py  test_user.py
